add module add-opens details